objects/SBQQ__RelatedContent__c.object
<CustomObject>
    <description>Links certain marketing content (datasheets, specifications, case study) to a product or a template.</description>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>The order in which this item will appear to a sales user in the Related Content menu. If blank, the content will be sorted last.</description>
        <inlineHelpText>Set the order in which this item will appear to a sales user in the Related Content menu. If blank, the content will be sorted last.</inlineHelpText>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentName__c</fullName>
        <description>This contains the file name for the related content.</description>
        <formula>IF(((LEFT(SBQQ__ExternalId__c , 3)  = &apos;015&apos;) || (LEFT(SBQQ__ExternalId__c , 3)  = &apos;00P&apos;)), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; SBQQ__ExternalId__c, &quot;View Document in New Window&quot;), 
IF(LEFT(SBQQ__ExternalId__c , 3)  = &apos;069&apos;, HYPERLINK(&quot;/sfc/#version?selectedDocumentId=&quot; &amp; SBQQ__ExternalId__c, &quot;View Content Workspace in New Window&quot;),
&quot;Not Document or workspace ID Specified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter a file name for the related content.</inlineHelpText>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExternalId__c</fullName>
        <description>ID of the record that contains the actual content. Eg: Document or Salesforce Content.</description>
        <inlineHelpText>Record ID that contains the content, such as document or Salesforce content.</inlineHelpText>
        <label>External Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to this content.</description>
        <inlineHelpText>Opportunity related to this content.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>Additional_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to this content.</description>
        <inlineHelpText>Product related to this content.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template related to this content.</description>
        <inlineHelpText>Template related to this content.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>ProductContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote related to this content.</description>
        <inlineHelpText>Quote related to this content.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>RelatedContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this content as required for this product.</description>
        <inlineHelpText>Select the checkbox if this content is required for the product. Users must include it when generating a quote document.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TemplateSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template Section related to this content.</description>
        <inlineHelpText>Template Section related to this content.</inlineHelpText>
        <label>Template Section</label>
        <referenceTo>SBQQ__TemplateSection__c</referenceTo>
        <relationshipLabel>Additional Documents</relationshipLabel>
        <relationshipName>RelatedContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Document</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__DocumentName__c</columns>
        <columns>SBQQ__ExternalId__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__Quote__c</columns>
        <columns>SBQQ__QuoteTemplate__c</columns>
        <columns>SBQQ__Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Additional Document</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>